--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,60 @@
-numpy~=1.24.2
-networkx~=3.1
-tqdm~=4.65.0
-gensim~=4.3.1
-jsonlines~=3.1.0
-torch~=2.0.0
-argparse~=1.4.0
-sentence_transformers~=2.2.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+autopep8 @ file:///opt/conda/conda-bld/autopep8_1650463822033/work
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+cmake==3.26.3
+filelock==3.12.0
+frozenlist==1.3.3
+gensim==4.3.1
+huggingface-hub==0.13.4
+idna==3.4
+Jinja2==3.1.2
+joblib==1.2.0
+jsonlines==3.1.0
+lit==16.0.1
+MarkupSafe==2.1.2
+mpmath==1.3.0
+multidict==6.0.4
+networkx==3.1
+nltk==3.8.1
+numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+openai==0.27.6
+packaging==23.1
+Pillow==9.5.0
+pycodestyle @ file:///croot/pycodestyle_1674267221883/work
+PyYAML==6.0
+regex==2023.3.23
+requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.98
+smart-open==6.3.0
+sympy==1.11.1
+threadpoolctl==3.1.0
+tokenizers==0.13.3
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+torch==2.0.0
+torchmetrics==0.11.4
+torchvision==0.15.1
+tqdm==4.65.0
+transformers==4.28.1
+triton==2.0.0
+typing_extensions==4.5.0
+urllib3==1.26.15
+yarl==1.9.2
