--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,77 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+black @ file:///croot/black_1680737249031/work
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cmake==3.26.3
+diffsort==0.2.0
+filelock==3.12.0
+frozenlist==1.3.3
 gensim==4.3.1
 googledrivedownloader==0.4
 huggingface-hub==0.13.4
+idna==3.4
+isodate==0.6.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonlines==3.1.0
+lit==16.0.5
+MarkupSafe==2.1.2
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==0.4.3
 networkx==3.1
+nltk==3.8.1
 numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 openai==0.27.6
 packaging==23.1
 pandas==2.0.1
+pathspec @ file:///croot/pathspec_1674681560568/work
+Pillow==9.5.0
+platformdirs @ file:///opt/conda/conda-bld/platformdirs_1662711380096/work
+psutil==5.9.5
+pyg-lib==0.2.0+pt20cu117
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-louvain==0.16
+pytz==2023.3
+PyYAML==6.0
+rdflib==6.3.2
+regex==2023.5.5
+requests==2.30.0
 scikit-learn==0.24.2
 scipy==1.10.1
 sentence-transformers==2.2.2
 sentencepiece==0.1.98
+six==1.16.0
+smart-open==6.3.0
+sympy==1.12
+threadpoolctl==3.1.0
 tokenizers==0.13.3
+tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
 torch==2.0.0
-torch-geometric==1.7.1
+torch-geometric==2.3.1
+torch-sparse==0.6.17+pt20cu117
 torchmetrics==0.11.4
+torchvision==0.15.1
 tqdm==4.65.0
 transformers==4.28.1
+triton==2.0.0
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==2.0.2
 yarl==1.9.2
