--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,40 @@
+accelerate==0.23.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
-black @ file:///croot/black_1680737249031/work
+
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 cmake==3.26.3
+contourpy==1.1.1
+cycler==0.12.1
+datasets==2.14.5
 diffsort==0.2.0
+dill==0.3.7
+evaluate==0.4.1
+faiss-gpu==1.7.2
 filelock==3.12.0
+fonttools==4.43.1
 frozenlist==1.3.3
+fsspec==2023.6.0
 gensim==4.3.1
 googledrivedownloader==0.4
-huggingface-hub==0.13.4
+huggingface-hub==0.18.0
 idna==3.4
 isodate==0.6.1
 Jinja2==3.1.2
 joblib==1.2.0
 jsonlines==3.1.0
+kiwisolver==1.4.5
+lightning-utilities==0.9.0
 lit==16.0.5
 MarkupSafe==2.1.2
+matplotlib==3.8.0
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 mypy-extensions==0.4.3
 networkx==3.1
 nltk==3.8.1
@@ -38,22 +51,29 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 openai==0.27.6
+-e git+https://github.com/Shark-NLP/OpenICL.git@1613ae10b88ba2dbfed425c4ee078b2a6586152e#egg=openicl
 packaging==23.1
 pandas==2.0.1
-pathspec @ file:///croot/pathspec_1674681560568/work
+
+pesq==0.0.4
 Pillow==9.5.0
-platformdirs @ file:///opt/conda/conda-bld/platformdirs_1662711380096/work
+
 psutil==5.9.5
+pyarrow==13.0.0
 pyg-lib==0.2.0+pt20cu117
 pyparsing==3.0.9
+pystoi==0.3.3
 python-dateutil==2.8.2
 python-louvain==0.16
+pytorch-lightning==2.0.9.post0
 pytz==2023.3
 PyYAML==6.0
+rank-bm25==0.2.2
 rdflib==6.3.2
 regex==2023.5.5
 requests==2.30.0
-scikit-learn==0.24.2
+responses==0.18.0
+scikit-learn==1.3.1
 scipy==1.10.1
 sentence-transformers==2.2.2
 sentencepiece==0.1.98
@@ -62,7 +82,7 @@ smart-open==6.3.0
 sympy==1.12
 threadpoolctl==3.1.0
 tokenizers==0.13.3
-tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
+
 torch==2.0.0
 torch-geometric==2.3.1
 torch-sparse==0.6.17+pt20cu117
@@ -74,4 +94,5 @@ triton==2.0.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==2.0.2
+xxhash==3.4.1
 yarl==1.9.2
